--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button onclick="add2()">2 masala</button>
         <button onclick="element3()">4 masala</button>
         <button onclick="Ism4()">6 masala</button>
+        <a href="https://project-lac-eight.vercel.app/"><button >before </button></a>
     </div>
 
     <script src="./app.js"></script>
